--- a/src/library-biomass-harvest.csproj
+++ b/src/library-biomass-harvest.csproj
@@ -1,104 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{19DF3615-5E00-4E27-8ACF-48357806BD3F}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Landis.Library.BiomassHarvest</RootNamespace>
-    <AssemblyName>Landis.Library.BiomassHarvest-v2.0.1</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Landis.Library.BiomassHarvest-v2.xml</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Landis.Library.BiomassHarvest-v2.xml</DocumentationFile>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="Edu.Wisc.Forest.Flel.Util">
-     <SpecificVersion>False</SpecificVersion>
-     <Private>False</Private>    
-    </Reference>
-    <Reference Include="Landis.Core">
-     <SpecificVersion>False</SpecificVersion>
-     <Private>False</Private>    
-    </Reference>
-    <Reference Include="Landis.Library.AgeOnlyCohorts">
-      <SpecificVersion>False</SpecificVersion>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Landis.Library.BiomassCohorts-v2.0.1">
-     <SpecificVersion>False</SpecificVersion>
-     <Private>False</Private>    </Reference>
-    <Reference Include="Landis.Library.Cohorts">
-     <SpecificVersion>False</SpecificVersion>
-     <Private>False</Private>    
-    </Reference>
-    <Reference Include="Landis.Library.SiteHarvest-v1">
-     <SpecificVersion>False</SpecificVersion>
-     <Private>False</Private>
-    </Reference>
-    <Reference Include="Landis.SpatialModeling">
-     <SpecificVersion>False</SpecificVersion>
-     <Private>False</Private>    
-    </Reference>
-    <Reference Include="log4net">
-     <SpecificVersion>False</SpecificVersion>
-     <Private>False</Private>    
-    </Reference>
-    <Reference Include="System" />
-  </ItemGroup>
-    <ItemGroup>
-    <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="CohortCutterFactory.cs" />
-    <Compile Include="Debug.cs" />
-    <Compile Include="Main.cs" />
-    <Compile Include="Model.cs" />
-    <Compile Include="PartialCohortCutter.cs" />
-    <Compile Include="PartialCohortSelectors.cs" />
-    <Compile Include="PartialThinning.cs" />
-    <Compile Include="SiteBiomass.cs" />
-    <Compile Include="SiteVars.cs" />
-    <Compile Include="SpecificAgesCohortSelector.cs" />
-  </ItemGroup>
-  <ItemDefinitionGroup>
-    <Reference>
-    </Reference>
-  </ItemDefinitionGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-</PropertyGroup>
+<Project Sdk="Microsoft.NET.Sdk">  
 
   <PropertyGroup>
-    <PreBuildEvent>call $(SolutionDir)\install-libs.cmd</PreBuildEvent>
-</PropertyGroup>
- <!--
-  To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+    <RootNamespace>Landis.Library.BiomassHarvest</RootNamespace>
+    <AssemblyName>Landis.Library.BiomassHarvest-v2.0.1</AssemblyName>
+    <AssemblyTitle>Biomass Harvest Library</AssemblyTitle>
+    <AssemblyVersion>2.0.1</AssemblyVersion>
+    <AssemblyDescription>Harvest Library for LANDIS-II</AssemblyDescription>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Company>LANDIS-II Foundation</Company>
+    <Copyright>LANDIS-II Foundation</Copyright>
+    <Authors>LANDIS-II Foundation</Authors>
+    <Product>Library Biomass Harvest</Product>
+    <Description>Library-Biomass-Harvest is a support library for Extension Biomass Harvest.
+Extension Biomass Harvest is found at: (https://github.com/LANDIS-II-Foundation/Extension-Biomass-Harvest)</Description>
+    <PackageProjectUrl>https://sites.google.com/site/landismodel/home</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/LANDIS-II-Foundation/Library-Biomass-Harvest</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>LANDIS-II;Landis;Library;Biomass harvest</PackageTags>
+    <NeutralLanguage>English</NeutralLanguage>
+  </PropertyGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="Landis.Library.AgeOnlyCohorts" Version="1.0.0" />
+    <PackageReference Include="Landis.Library.BiomassCohorts-v2" Version="1.0.0" />
+    <PackageReference Include="Landis.Library.Cohorts" Version="1.0.0" />
+    <PackageReference Include="Landis.Library.SiteHarvest-v1" Version="1.0.0" />
+    <PackageReference Include="Landis.SpatialModeling" Version="1.0.0" />
+    <PackageReference Include="Landis.Utilities" Version="1.0.0" />
+    <PackageReference Include="log4net" Version="2.0.8" />
+  </ItemGroup>
+  
 </Project>
