--- a/src/library-biomass-harvest.csproj
+++ b/src/library-biomass-harvest.csproj
@@ -6,7 +6,7 @@
     <AssemblyTitle>Landis.Library.BiomassHarvest-v3</AssemblyTitle>
     <AssemblyCompany>LANDIS-II Foundation</AssemblyCompany>
     <AssemblyProduct>Landis.Library.BiomassHarvest-v3</AssemblyProduct>    
-    <AssemblyVersion>3.2</AssemblyVersion>
+    <AssemblyVersion>3.3</AssemblyVersion>
     <AssemblyDescription>Harvest Library for LANDIS-II</AssemblyDescription>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
@@ -18,30 +18,36 @@
     <Authors>LANDIS-II Foundation</Authors>    
     <Product>Library Biomass Harvest</Product>    
     <Copyright>LANDIS-II Foundation</Copyright>
-    <Version>3.2</Version>
+    <Version>3.3</Version>
     <PackageTags>LANDIS-II;Landis;Library;Biomass harvest</PackageTags>
     <Description>Library-Biomass-Harvest is a support library for Extension Biomass Harvest.
 Extension Biomass Harvest is found at: (https://github.com/LANDIS-II-Foundation/Extension-Biomass-Harvest)</Description>
     <PackageReleaseNotes>.NET Standard 2.0 update.</PackageReleaseNotes>
-    <FileVersion>3.2</FileVersion>
+    <FileVersion>3.3</FileVersion>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
-  
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>C:\BRM\LANDIS_II\GitCode\brmiranda\Core-Model-v7\Tool-Console\src\bin\extensions</OutputPath>
+    <!--<OutputPath>bin\Debug\</OutputPath>-->
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Landis.Core" Version="2.0.0" />
   </ItemGroup>
   
   <ItemGroup>
     <Reference Include="Landis.Library.AgeOnlyCohorts-v3">
-      <HintPath>lib\Landis.Library.AgeOnlyCohorts-v3.dll</HintPath>
+      <HintPath>..\..\Support-Library-Dlls-v7\Landis.Library.AgeOnlyCohorts-v3.dll</HintPath>
     </Reference>
-    <Reference Include="Landis.Library.BiomassCohorts-v3">
-      <HintPath>lib\Landis.Library.BiomassCohorts-v3.dll</HintPath>
+    <Reference Include="Landis.Library.BiomassCohorts-v4">
+      <HintPath>..\..\brmiranda\Core-Model-v7\Tool-Console\src\bin\extensions\Landis.Library.BiomassCohorts-v4.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.Cohorts-v2">
-      <HintPath>lib\Landis.Library.Cohorts-v2.dll</HintPath>
+      <HintPath>..\..\Support-Library-Dlls-v7\Landis.Library.Cohorts-v2.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.SiteHarvest-v2">
-      <HintPath>lib\Landis.Library.SiteHarvest-v2.dll</HintPath>
+      <HintPath>..\..\brmiranda\Core-Model-v7\Tool-Console\src\bin\extensions\Landis.Library.SiteHarvest-v2.dll</HintPath>
     </Reference>
   </ItemGroup>
   
