--- a/src/library-biomass-harvest.csproj
+++ b/src/library-biomass-harvest.csproj
@@ -41,13 +41,13 @@ Extension Biomass Harvest is found at: (https://github.com/LANDIS-II-Foundation/
       <HintPath>..\..\Support-Library-Dlls-v7\Landis.Library.AgeOnlyCohorts-v3.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.BiomassCohorts-v4">
-      <HintPath>..\..\brmiranda\Core-Model-v7\Tool-Console\src\bin\extensions\Landis.Library.BiomassCohorts-v4.dll</HintPath>
+      <HintPath>..\..\Core-Model-v7\Tool-Console\src\bin\extensions\Landis.Library.BiomassCohorts-v4.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.Cohorts-v2">
       <HintPath>..\..\Support-Library-Dlls-v7\Landis.Library.Cohorts-v2.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.SiteHarvest-v2">
-      <HintPath>..\..\brmiranda\Core-Model-v7\Tool-Console\src\bin\extensions\Landis.Library.SiteHarvest-v2.dll</HintPath>
+      <HintPath>..\..\Core-Model-v7\Tool-Console\src\bin\extensions\Landis.Library.SiteHarvest-v2.dll</HintPath>
     </Reference>
   </ItemGroup>
   
